# ab-samples

./: .gitmodules  README.md
.github/workflows/: project_clang.yml  project_gprolog.yml  project_hello.yml  project_ipxe.yml  project_kernel.yml  project_kernel_llvm.yml  project_kernel_tiny.yml  project_libsodium.yml  project_menu.yml  project_neovim.yml  project_rust_small.yml  project_scheme48.yml  project_tinycc.yml  project_verifier_client.yml  (+17 more)
project_clang/: build.sh
project_gprolog/: build.sh
project_hello/: build.sh
project_ipxe/: build.sh
project_kernel/: build.sh
project_kernel_llvm/: build.sh
project_kernel_tiny/: build.sh
project_libsodium/: build.sh  info.txt
project_menu/: build.sh
project_neovim/: build.sh
project_rust_small/: Cargo.toml  build.sh
project_scheme48/: build.sh  scheme48-1.9.3.tgz
project_tinycc/: build.sh
project_verifier_client/: README.md
project_verifier_client_j1/: build.sh
project_verifier_client_j2/: build.sh
project_verifier_client_j3/: build.sh
project_verifier_client_j4/: build.sh
project_verifier_client_j5/: Cargo.toml  build.sh
project_verifier_client_j6/: build.sh
project_verifier_client_j7/: build.sh
project_verifier_client_j8/: build.sh
project_xz_tar/: build.sh
project_xz_tar_j1/: build.sh
project_xz_tar_j2/: build.sh
project_xz_tar_j3/: build.sh
project_xz_tar_j5/: build.sh
project_xz_tar_j6/: build.sh
project_xz_tar_j7/: build.sh
project_xz_tar_j8/: build.sh
sample_workflow_files/: after.yml  before.yml
scripts/: create_job_scaler_folders.sh  recreate_branches.sh
(+7 files in other folders)
